examples/bad/09-string-to-int.mw
var str string = "Not a number";
print str.ToInt(); // Conversion error
